<resources>
    <string name="app_name">CatchApp</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="iit_palakkad">IIT PALAKKAD</string>
    <string name="admin_id">kunal725725@gmail.com</string>
    <string name="iit_palakkad_logo">IIT PALAKKAD LOGO</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="home">Home</string>
    <string name="others">Others</string>
    <string name="logOut">Log Out</string>
    <string name="refresh">Refresh</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_password">Reset Password</string>
</resources>
