<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />    </group>
    <item android:title="Remove all markers"
          android:id="@+id/remove_markers"
          android:icon="@drawable/ic_delete_black_24dp"/>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/help"
                android:icon="@drawable/ic_help_black_24dp"
                android:title="@string/help" />
            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/about" />
            <item
                android:id="@+id/signOut"
                android:icon="@drawable/ic_power_settings_new_black_24dp"
                android:title="@string/logOut"/>
        </menu>
    </item>

</menu>
